stop overflow-y on .container

--- a/index.css
+++ b/index.css
@@ -282,6 +282,7 @@ nav li:focus-within a {
 	background-image: var(--gradient-darken);
 	position: relative;
 	z-index: 2;
+	overflow-y: hidden;
 }
 
 section {
